--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
 
     body {
       margin: 1rem;
+      color: #101112;
     }
+
+    main {
+      width: 100%;
+      display: flex;
+    }
+
+    section {
+      width: 100%;
+    }
+
+    section:last-child {
+      margin-left: 2rem;
+      align-self: stretch;
+    }
+
+    section:last-child .formControl {
+      height: 100%;
+    }
+
+    @media screen and (max-width: 768px) {
+      main {
+        flex-direction: column;
+      }
+
+      section:last-child {
+        margin-top: 2rem;
+        margin-left: 0;
+      }
+    }
+
 
     label {
       font-style: normal;
@@ -54,8 +85,11 @@
       width: 100%;
     }
 
-    #sendButon {
+    #mail {
       margin-top: 1rem;
+    }
+
+    #sendButon {
       border: none;
       width: 100%;
       height: 48px;
@@ -70,10 +104,19 @@
       border-radius: 0.25rem;
     }
 
+    @media (hover: hover) {
+      #sendButon:hover {
+        background: #A797F0;
+      }
+    }
+    #sendButon:active {
+        background: #A797F0;
+      }
+
     #preview {
       margin: 0;
+      height: 100%;
       width: 100%;
-      margin-top: 1rem;
       padding: 1rem;
       background-color: #F3F5F7;
       border-radius: 0.5rem;
@@ -85,6 +128,11 @@
 
     p {
       margin: 0;
+      white-space: break-spaces;
+    }
+
+    .mark {
+      color: #8E9398;
     }
 
     footer {
@@ -98,64 +146,72 @@
 </head>
 <body>
   <h1>PolitE-mail</h1>
-  <form>
-    <div class="formControl">
-      <label for="name">이름<span aria-hidden="true" class="asterisk">*</span></label>
-      <input id="name" name="name"  type="text" placeholder="김뿌슝" required autofocus>
-    </div>
-
-    <div class="autocomplete">
+  <main>
+    <section>
+      <form>
       <div class="formControl">
-        <label for="department">학과<span aria-hidden="true" class="asterisk">*</span></label> 
-        <input id="department" list="departments" type="text" placeholder="유어슈학과" required>
+        <label for="name">이름<span aria-hidden="true" class="asterisk">*</span></label>
+        <input id="name" name="name"  type="text" placeholder="김뿌슝" required autofocus>
       </div>
-      <datalist id="departments">
-        <option value="기독교학과"><option value="국어국문학과"><option value="영어영문학과"><option value="독어독문학과"><option value="불어불문학과"><option value="중어중문학과"><option value="일어일문학과"><option value="철학과"><option value="사학과"><option value="예술창작학부"><option value="스포츠학부"><option value="수학과"><option value="물리학과"><option value="화학과"><option value="정보통계보험수리학과"><option value="의생명시스템학부"><option value="법학과"><option value="국제법무학과"><option value="사회복지학부"><option value="행정학부"><option value="정치외교학과"><option value="정보사회학과"><option value="언론홍보학과"><option value="평생교육학과"><option value="경제학과"><option value="글로벌통상학과"><option value="금융경제학과"><option value="국제무역학과"><option value="통상산업학과"><option value="경영학부"><option value="벤처중소기업학과"><option value="회계학과"><option value="금융학부"><option value="벤처경영학과"><option value="혁신경영학과"><option value="복지경영학과"><option value="회계세무학과"><option value="화학공학과"><option value="산업정보시스템공학과"><option value="전기공학부"><option value="기계공학부"><option value="건축학부"><option value="유기신소재파이버공학과"><option value="컴퓨터학부"><option value="전자정보공학부"><option value="글로벌미디어학부"><option value="소프트웨어학부"><option value="AI융학학부"><option value="미디어경영학과"><option value="IT융합전공"><option value="융합특성화자유전공학부">
-      </datalist>
-    </div>
 
-    <div class="formControl">
-      <label for="number">학번<span aria-hidden="true" class="asterisk">*</span></label>
-      <input id="number" type="number" placeholder="2022XXXX" required>
-    </div>
-    <div class="formControl">
-      <label for="phone">전화번호</label>
-      <input id="phone" type="tel" autocomplete="tel" placeholder="010-1234-5678">
-    </div>
-    <div class="formControl">
-      <label for="lecture">강의명<span aria-hidden="true" class="asterisk">*</span></label>
-      <input id="lecture" type="text" placeholder="점뿌의 이해" required>
-    </div>
-    <div class="formControl">
-      <label for="division">분반</label>
-      <input id="division" type="text" placeholder="가">
-    </div>
-    <div class="formControl">
-      <label for="subject">주제<span aria-hidden="true" class="asterisk">*</span></label>
-      <input id="subject" type="text" placeholder="과제 채점 기준" required>
-    </div>
-    <div class="formControl">
-      <label for="professor">교수님 이름<span aria-hidden="true" class="asterisk">*</span></label>
-      <input id="professor" type="text" placeholder="최교수" required>
-    </div>
-    <div class="formControl">
-      <label for="mailAddress">교수님 메일 주소<span aria-hidden="true" class="asterisk">*</span></label>
-      <input id="mailAddress" type="email" name="email" autocomplete="email" placeholder="professor@soongsil.ac.kr" required>
-    </div>
-  </form>
+      <div class="autocomplete">
+        <div class="formControl">
+          <label for="department">학과/부<span aria-hidden="true" class="asterisk">*</span></label> 
+          <input id="department" list="departments" type="text" placeholder="유어슈학과" required>
+        </div>
+        <datalist id="departments">
+          <option value="기독교학과"><option value="국어국문학과"><option value="영어영문학과"><option value="독어독문학과"><option value="불어불문학과"><option value="중어중문학과"><option value="일어일문학과"><option value="철학과"><option value="사학과"><option value="예술창작학부"><option value="스포츠학부"><option value="수학과"><option value="물리학과"><option value="화학과"><option value="정보통계보험수리학과"><option value="의생명시스템학부"><option value="법학과"><option value="국제법무학과"><option value="사회복지학부"><option value="행정학부"><option value="정치외교학과"><option value="정보사회학과"><option value="언론홍보학과"><option value="평생교육학과"><option value="경제학과"><option value="글로벌통상학과"><option value="금융경제학과"><option value="국제무역학과"><option value="통상산업학과"><option value="경영학부"><option value="벤처중소기업학과"><option value="회계학과"><option value="금융학부"><option value="벤처경영학과"><option value="혁신경영학과"><option value="복지경영학과"><option value="회계세무학과"><option value="화학공학과"><option value="산업정보시스템공학과"><option value="전기공학부"><option value="기계공학부"><option value="건축학부"><option value="유기신소재파이버공학과"><option value="컴퓨터학부"><option value="전자정보공학부"><option value="글로벌미디어학부"><option value="소프트웨어학부"><option value="AI융학학부"><option value="미디어경영학과"><option value="IT융합전공"><option value="융합특성화자유전공학부">
+        </datalist>
+      </div>
 
+      <div class="formControl">
+        <label for="number">학번<span aria-hidden="true" class="asterisk">*</span></label>
+        <input id="number" type="number" placeholder="2022XXXX" required>
+      </div>
+      <div class="formControl">
+        <label for="phone">전화번호</label>
+        <input id="phone" type="tel" autocomplete="tel" placeholder="010-1234-5678">
+      </div>
+      <div class="formControl">
+        <label for="lecture">강의명<span aria-hidden="true" class="asterisk">*</span></label>
+        <input id="lecture" type="text" placeholder="점뿌의 이해" required>
+      </div>
+      <div class="formControl">
+        <label for="division">분반</label>
+        <input id="division" type="text" placeholder="가">
+      </div>
+      <div class="formControl">
+        <label for="subject">주제<span aria-hidden="true" class="asterisk">*</span></label>
+        <input id="subject" type="text" placeholder="과제 채점 기준" required>
+      </div>
+      <div class="formControl">
+        <label for="professor">교수님 이름<span aria-hidden="true" class="asterisk">*</span></label>
+        <input id="professor" type="text" placeholder="최교수" required>
+      </div>
+      <div class="formControl">
+        <label for="mailAddress">교수님 메일 주소<span aria-hidden="true" class="asterisk">*</span></label>
+        <input id="mailAddress" type="email" name="email" autocomplete="email" placeholder="professor@soongsil.ac.kr" required>
+      </div>
+    </form>
+  </section>
 
-  <a id="mail" href="">
-    <button id="sendButon">
-      메일 쓰기!
-    </button>
-  </a>
+  <section>
+    <div class="formControl">
+      <label id="previewLabel" for="preview">미리보기</label>
+      <div id="preview">
+        <h3 id="title"></h3>
+        <br>
+        <p id="body"></p>
+      </div>
 
-  <blockquote id="preview">
-    <h3 id="title"></h3>
-    <br>
-    <p id="body"></p>
-  </blockquote>
+      <a id="mail" href="">
+        <button id="sendButon">
+          메일 쓰기!
+        </button>
+      </a>
+    </div>
+  </section>
+  </main>
 
   <footer>
     <small>
@@ -174,8 +230,8 @@
     var professor = ""
     var mailAddress = ""
 
-    var titleText = "제목"
-    var bodyText = "본문"
+    var titleText = ""
+    var bodyText = ""
 
     var submitButton =document.querySelector('button')
 
@@ -203,9 +259,29 @@
       window.localStorage.setItem('polite-mail-information', JSON.stringify(object))
     }
 
+    function isEndWithConsonant(korStr) {
+        const finalChrCode = korStr.charCodeAt(korStr.length - 1)
+        // 0 = 받침 없음, 그 외 = 받침 있음
+        const finalConsonantCode = (finalChrCode - 44032) % 28
+        return finalConsonantCode !== 0
+    };
+
     function setPreview() {
-      titleElement.innerText = titleText
-      bodyElement.innerText = bodyText
+      titleText = `[${subject ? subject : '<span class="mark">주제</span>'}] ${number ? number : '<span class="mark">학번</span>'} ${name ? name : '<span class="mark">이름</span>'}입니다.`
+      bodyText = `안녕하세요 ${professor ? `${professor} ` : ''}교수님.
+[${lecture ? lecture : '<span class="mark">강의제목</span>'}${division ? `(${division}반)` : ''}]${isEndWithConsonant(lecture) ? '을':'를'} 수강하고 있는 ${department ? department : '<span class="mark">학과/부</span>'} ${name ? name : '<span class="mark">이름</span>'}입니다.
+${subject ? subject : '<span class="mark">주제</span>'} 관련해 메일 드리게 되었습니다.
+
+=====본론은 직접 입력해주세요=====
+
+좋은 하루 되세요.
+${name ? name : '<span class="mark">이름</span>'}드림.${phone ? `
+------------------
+
+${phone}` : ''}
+`
+      titleElement.innerHTML = titleText
+      bodyElement.innerHTML = bodyText
 
       var mailBodyText = bodyText.replaceAll('\n', '%0D%0A')
       mailLink.href = `mailto:${mailAddress}?subject=${titleText}&body=${mailBodyText}`
@@ -241,20 +317,6 @@
           mailAddress = e.target.value
           break;
       }
-
-      titleText = `[${subject}] ${number} ${name}입니다.`
-      bodyText = `안녕하세요 ${professor ? `${professor} ` : ''}교수님.
-[${lecture}${division ? `(${division}반)` : ''}]${isEndWithConsonant(lecture) ? '을':'를'} 수강하고 있는 ${department} ${name}입니다.
-${subject} 관련해 메일 드리게 되었습니다.
-
-=====본론은 직접 입력해주세요=====
-
-좋은 하루 되세요.
-${name}드림.${phone ? `
-------------------
-
-${phone}` : ''}
-`
       setPreview()
       setLocalStorage()
     }
@@ -287,15 +349,6 @@ ${phone}` : ''}
     }
 
     initialize()
-  </script>
-
-  <script>
-    function isEndWithConsonant(korStr) {
-        const finalChrCode = korStr.charCodeAt(korStr.length - 1)
-        // 0 = 받침 없음, 그 외 = 받침 있음
-        const finalConsonantCode = (finalChrCode - 44032) % 28
-        return finalConsonantCode !== 0
-    };
   </script>
 </body>
 </html>
