--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
     var spans = previewElement.querySelectorAll('span')
     previewElement.querySelectorAll('span.hint').forEach(markSpan => {
-      markSpan.addEventListener('mouseover', handleClickPreview)
+      markSpan.addEventListener('mouseenter', handleClickPreview)
     })
 
     function isEndWithConsonant(korStr) {
@@ -291,7 +291,7 @@
     };
 
     function setPreview() {
-      spans.forEach(span => span.removeEventListener('mouseover', handleClickPreview))
+      spans.forEach(span => span.removeEventListener('mouseenter', handleClickPreview))
       spans.forEach(span => span.removeEventListener('click', handleClickPreview))
       var name = info.name ? info.name : '<span input="name" class="hint">이름</span>'
       var department = info.department ? info.department : '<span input="department" class="hint">학과/부</span>'
