분반 버그 수정

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ ${phone}` : ''}
       var number = info.number ? info.number : '<span input="number" class="hint">학번</span>'
       var phone = info.phone
       var lecture = info.lecture ? info.lecture : '<span input="lecture" class="hint">강의 제목</span>'
-      var division = info.division ? `(${info.division}반)` : ''
+      var division = info.division
       var subject = info.subject ? info.subject : '<span input="subject" class="hint">주제</span>'
       var professor = info.professor ? info.professor : ''
 
